results/SVCOMP/conversational/log-HttpSession-2024_03_13_05_58_03.txt
import java.util.Collections;
import java.util.Enumeration;
import java.util.HashMap;
import java.util.Map;

public class HttpSession {

  private final Map<String, Object> map = new HashMap<>();

  //@ requires name != null;
  //@ ensures \result == map.get(name);
  public Object getAttribute(String name) {
    return map.get(name);
  }

  //@ ensures \result != null ==> \result.hasMoreElements();
  //@ ensures \result != null ==> (\forall String s; map.keySet().contains(s); \result.nextElement().equals(s));
  public Enumeration<String> getAttributeNames() {
    return Collections.enumeration(map.keySet());
  }

  //@ requires name != null;
  //@ ensures map.containsKey(name);
  //@ ensures map.get(name) == value;
  public void setAttribute(String name, Object value) {
    this.map.put(name, value);
  }
}
/home/max/Documents/JMLGPT/tmp/HttpSession.java:11: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == map.get(name);
                         ^
/home/max/Documents/JMLGPT/tmp/HttpSession.java:17: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result != null ==> (\forall String s; map.keySet().contains(s); \result.nextElement().equals(s));
                                                     ^
/home/max/Documents/JMLGPT/tmp/HttpSession.java:23: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures map.containsKey(name);
              ^
/home/max/Documents/JMLGPT/tmp/HttpSession.java:24: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures map.get(name) == value;
              ^
4 errors

import java.util.Collections;
import java.util.Enumeration;
import java.util.HashMap;
import java.util.Map;

public class HttpSession {

  private /*@ spec_public @*/ final Map<String, Object> map = new HashMap<>();

  //@ requires name != null;
  //@ ensures \result == map.get(name);
  public Object getAttribute(String name) {
    return map.get(name);
  }

  //@ ensures \result != null ==> \result.hasMoreElements();
  //@ ensures \result != null ==> (\forall String s; map.keySet().contains(s); \result.nextElement().equals(s));
  public Enumeration<String> getAttributeNames() {
    return Collections.enumeration(map.keySet());
  }

  //@ requires name != null;
  //@ ensures map.containsKey(name);
  //@ ensures map.get(name) == value;
  public void setAttribute(String name, Object value) {
    this.map.put(name, value);
  }
}
